Bug 386423 - color on link defined by inline style is not applied
Summary: color on link defined by inline style is not applied
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 5.2.3
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-01 10:22 UTC by Jan Martinec
Modified: 2018-10-24 05:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments
button "Přejít na Aktuálně" unreadable (81.43 KB, image/png)
2017-11-01 10:22 UTC, Jan Martinec
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Martinec 2017-11-01 10:22:24 UTC
Created attachment 108663 [details]
button "Přejít na Aktuálně" unreadable

An A element with an explicitly styled color, inside a TABLE with and explicitly styled background-color, still gets the default link-color, thus becoming unreadable.

What should happen:
1. open e-mail in HTML view
2. see table with blue background and white text

What happens instead:
2. see table with blue background and blue text (see attachment)

Below is one of the tables in question:

<table border="0" cellpadding="0" cellspacing="0" class="mcnButtonContentContainer"
	   style="border-collapse: separate !important;border-radius: 3px;background-color: #2785a5;mso-table-lspace: 0;mso-table-rspace: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
	<tbody>
	<tr>
		<td align="center" valign="middle" class="mcnButtonContent"
			style="font-family: Arial;font-size: 16px;padding: 15px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
			<a class="mcnButton"
			   href="https://aktualne.us8.list-manage.com/track/click?u=5ec4c91d59d1b26aefb919e61&amp;id=0bf30eab98&amp;e=5c55646d3f"
			   target="_blank"
			   style="font-weight: 500;letter-spacing: .5px;line-height: 100%;text-align: center;text-decoration: none;color: #fff;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">
				link text which blends into the background color
			</a>
		</td>
	</tr>
	</tbody>
</table>
Comment 1 Laurent Montel 2018-10-24 05:35:34 UTC
Git commit 153570070a381624bc67dbfb843d202b8622721f by Laurent Montel.
Committed on 24/10/2018 at 05:34.
Pushed by mlaurent into branch 'master'.

Allow to use defined inline link style

Fix Bug 386423 - color on link defined by inline style is not applied
FIXED-IN: 5.10.0

M  +1    -1    CMakeLists.txt
M  +4    -0    messagecore/src/settings/messagecore.kcfg
M  +1    -0    messageviewer/src/viewer/csshelper.cpp
M  +0    -5    messageviewer/src/viewer/csshelperbase.cpp
M  +1    -1    messageviewer/src/viewer/csshelperbase.h

https://commits.kde.org/messagelib/153570070a381624bc67dbfb843d202b8622721f
Comment 2 Laurent Montel 2018-10-24 05:43:59 UTC
Git commit db093323d36de34d121462de9957089793191e02 by Laurent Montel.
Committed on 24/10/2018 at 05:43.
Pushed by mlaurent into branch 'master'.

Add UI settings for using inline link style

M  +1    -1    CMakeLists.txt
M  +8    -0    src/configuredialog/configureappearancepage.cpp
M  +2    -1    src/configuredialog/configureappearancepage.h

https://commits.kde.org/kmail/db093323d36de34d121462de9957089793191e02