Allow to use defined inline link style

Fix Bug 386423 - color on link defined by inline style is not applied
BUG: 386423
FIXED-IN: 5.10.0